--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 
     "require": {
         "mozillal10n/bugzilla": "~0.1",
-        "mozillal10n/cache": "~0.1"
+        "mozillal10n/cache": "~0.1",
+        "twig/twig": "~1.0"
     },
 
     "require-dev": {
